add mongo index note

--- a/db/mongo_index.org
+++ b/db/mongo_index.org
@@ -6,6 +6,11 @@
 > db.users.createIndex({"age" : 1, "username" : 1})
 #+end_src
 
+* Удаление индекса
+#+begin_src js
+> db.people.dropIndex("x_1_y_1")
+#+end_src
+
 * Рекомендации
 1. Нужно рассмотреть селективность индекса. Нас интересует, в какой степени для данного шаблона запроса индекс будет минимизировать количество отсканированных записей.
 #+begin_src js
@@ -49,3 +54,62 @@
 * Индексирование массивов
 В ходе индексирования массива для каждого элемента массива создается индексная запись, поэтому, если у поста 20 комментариев, он будет иметь 20 индексных записей. Это делает индексы массива более затратными, по сравнению с индексами, имеющими одно значение: при одной вставке, обновлении или удалении может потребоваться обновление каждой записи массива.
 =Нельзя= проиндексировать весь массив как единую сущность: при индексировании поля массива индексируется каждый элемент массива, а не сам массив.
+
+* Типы индексов
+** Уникальные
+Уникальные индексы гарантируют, что каждое значение будет отображаться в индексе не более одного раза.
+#+begin_src js
+> db.users.createIndex({"firstname": 1},
+... {"unique": true,"partialFilterExpression": {"firstname": {$exists: true } } } )
+#+end_src
+** Частичные индексы
+Если у вас есть поле, которое может или не может существовать, но должно быть уникальным, когда оно существует, можно сочетать параметры =unique= и =partial=.
+#+begin_src js
+> db.users.ensureIndex({"email" : 1}, {"unique" : true, "partialFilterExpression" :
+... { email: { $exists: true } }})
+#+end_src
+Если мы создадим частичный индекс по полю, которое может не существовать, то поиск (find), который использует этот индекс, не вернёт документы без индексного поля.
+Можно использовать метод =hint=, чтобы заставить его выполнить сканирование таблицы, если вам нужны документы с пропущенными полями.
+
+** Индексы для полнотекстового поиска
+Текстовым индексам требуется некое количество ключей, пропорциональных словам в индексируемых полях. Как следствие при создании текстового индекса может потребляться большое количество системных ресурсов.
+В результате приведенного ниже вызова метода =createIndex= будет создан индекс на основе термов в полях =title= и =body=:
+#+begin_src js
+> db.articles.createIndex({"title": "text", "body" : "text"})
+#+end_src
+По умолчанию каждому полю уделяется одинаковое внимание в текстовом индексе. Можно контролировать относительную важность, которую MongoDB придает каждому полю, указав веса:
+#+begin_src js
+> db.articles.createIndex({"title": "text",
+                            "body": "text"
+                          },
+                          {
+                              "weights": {
+                                  "title": 3,
+                                  "body": 2
+                              }
+                           })
+#+end_src
+Вы можете создать полнотекстовый индекс для всех строковых полей в документе, создав индекс =$**= – он не только ин-
+дексирует все строковые поля верхнего уровня, но также ищет во вложенных документах и массивах строковые поля:
+#+begin_src js
+> db.articles.createIndex({"$**" : "text"})
+#+end_src
+
+Используйте оператор запроса =$text= для выполнения текстового поиска в коллекции с текстовым индексом. Оператор =$text= будет токенизировать строку поиска, используя пробелы и большинство знаков препинания в качестве разделителей, и логический оператор «ИЛИ» для всех таких токенов в строке поиска.
+#+begin_src js
+> db.articles.find({"$text": {"$search": "impact crater lunar"}},
+                   {title: 1}
+                  ).limit(10)
+#+end_src
+Можно искать точные фразы, заключив их в двойные кавычки.
+#+begin_src js
+> db.articles.find({$text: {$search: "\"impact crater\" lunar"}},
+                   {title: 1}
+                  ).limit(10)
+#+end_src
+Показатель релевантности хранится в поле метаданных с именем =textScore=.
+#+begin_src js
+> db.articles.find({$text: {$search: "\"impact crater\" lunar"}},
+                   {title: 1, score: {$meta: "textScore"}}
+                  ).sort({score: {$meta: "textScore"}}).limit(10)
+#+end_src
