--- a/вакансии.org
+++ b/вакансии.org
@@ -567,3 +567,36 @@ Golang, entgo, PostgreSQL, Mongo, Kafka, OpenAPI, opai-codegen, GRPC, Gitlab CI,
 -Умеете работать с метриками;
 -Умеете писать автотесты (Unit и Integration) будет как преимущество.
 Контакты: https://career.avito.com/vacancies/razrabotka/15501/
+
+* Golang - разработчик
+Компания: Т1
+Чем предстоит заниматься:
+-Разрабатывать новые функции, модули и сервисы проекта
+-Участвовать в разработке и проектировании распределенных приложений
+-Мониторить и анализировать производительность сервисов
+-Писать тесты (юнит и интеграционные)
+-Заниматься code review
+
+Какие знания и навыки для нас важны:
+-Знания Golang
+-Понимание REST API
+-Умение делать SQL запросы (select, join etc.)
+-Знание базовых структур данных
+-Желание обучаться
+-Будет преимуществом: C/Cgo, Kafka (или другие брокеры очередей), Postgresql, Redis, gRPC
+Контакты: https://career.t1.ru/vacancies/vacancy-detail?id=121242458
+* Senior+ Golang Developer [EP Product Ordering]
+Локация: Москва
+Компания: МТС
+ЧЕМ ПРЕДСТОИТ ЗАНИМАТЬСЯ
+-участвовать в разработке функционала миграций
+-разрабатывать и поддерживать высокопроизводительные микросервисы на Go
+-заниматься реализацией полного цикла жизни ПО
+-собирать и анализировать бизнес-требования, общаться с владельцами продуктов.
+
+Кого мы ищем
+-опыт коммерческой разработки на Golang от 3-х лет
+-знание PostgreSQL/MongoDB
+-желательно, знакомство с движками Workflow (у нас используется Temporal)
+-будут плюсом: навыки системного аналитика или архитектора.
+Контакты: https://job.mts.ru/vacancy/536107293553460056
