--- a/План.md
+++ b/План.md
@@ -19,10 +19,9 @@ postrgess
 Clickhouse
 оконные функции
 
-Docker для Начинающих за 49 Мин
-https://www.youtube.com/live/0oke9VfRt2M
-
 # sd
+Топ 10 заповедей системного дизайна
+https://habr.com/ru/articles/915376/
 System Design для начинающих: всё, что вам нужно
 https://habr.com/ru/articles/873388/
 Архитектурные паттерны для высокой масштабируемости.
@@ -42,6 +41,9 @@ https://www.osp.ru/os/2017/02/13052224
 https://habr.com/ru/companies/vk/articles/321998/
 
 # kafka
+Изучаем Kafka — Уровень 1
+https://habr.com/ru/articles/916726/
+
 Apache Kafka урок 1. Зачем нужна, что это? 
 https://www.youtube.com/watch?v=DvXPKUUl38w
 https://habr.com/ru/articles/853652/
