--- a/вакансии.org
+++ b/вакансии.org
@@ -600,3 +600,23 @@ Golang, entgo, PostgreSQL, Mongo, Kafka, OpenAPI, opai-codegen, GRPC, Gitlab CI,
 -желательно, знакомство с движками Workflow (у нас используется Temporal)
 -будут плюсом: навыки системного аналитика или архитектора.
 Контакты: https://job.mts.ru/vacancy/536107293553460056
+
+* Go разработчик
+Remote | 400 - 600 т.р.
+Зарплатная вилка от 400 000 до 600 000
+Формат работы: Удалённо
+График: Полный день
+Вид трудоустройства: Официальное
+О компании: Приглашаем вас стать частью команды разработчиков Платформы ABCP — ключевого и незаменимого для тысяч клиентов по всему миру SaaS-продукта в сфере торговли автозапчастями.
+Требуемый опыт: От 3 лет
+Описание: Почему вам может понравиться работать с нами:
+Начали в 2005 году, и более 10 лет являемся примером для конкурентов.
+ABCP — это синоним доверия и качества среди всех участников рынка автозапчастей, потому что мы создаем надежные инструменты для эффективного развития их бизнеса.
+Требования:
+- Опыт управления командой от 2 человек (junior/middle, QA) от 2 лет;
+- Опыт в разработке от 4 лет;
+- Golang, sql, git, брокеры - уровень middle+ и выше;
+- Знание цикла разработки;
+- Опыт с Linux, Docker, CI/CD;
+- Умение проектировать по C4-модели.
+Дополнительная информация: Готовы к нам присоединиться? Для 100% уверенности в своем ответе на втором онлайн-собеседовании вы встретитесь с будущими коллегами по команде, где сможете убедиться, подходим мы вам или нет. Ждём ваш отклик!
