edit mongo agregation note

--- a/db/mongo_agr.org
+++ b/db/mongo_agr.org
@@ -119,3 +119,21 @@ early_rounds: { $slice: [ "$funding_rounds", 1, 3 ] }
     ...
     total_rounds: { $size: "$funding_rounds" }
 #+end_src
+
+* Группировка
+#+begin_src js
+db.companies.aggregate([
+    { $group: {
+        _id: { founded_year: "$founded_year" },
+        average_number_of_employees: { $avg: "$number_of_employees" }
+    } },
+    { $sort: { average_number_of_employees: -1 } }
+])
+#+end_src
+Основой этапа =$group= является поле "=_id=", которое мы указываем как часть документа. Это значение самого оператора =$group=, использующего очень строгую интерпретацию.
+
+* Запись результатов конвейера агрегации в коллекцию
+=$out= имеет некоторые ограничения: он может вести запись =только в одну= и ту же базу данных, он =перезаписывает= любую существующую коллекцию, если она есть, и не может вести запись в разделенную коллекцию.
+
+=$merge= может вести запись в =любую= базу данных и коллекцию, независимо от того, разделена она или нет, а также может включать результаты (вставка новых документов, слияние с существующими документами, сбой операции, сохранение существующих документов или обработка всех документов с пользовательским обновлением) при работе с существующей коллекцией.
+Но реальным преимуществом использования =$merge= является тот факт, что он может создавать материализованные представления по требованию, где содержимое выходной коллекции постепенно обновляется при запуске конвейера.
