--- a/вакансии.org
+++ b/вакансии.org
@@ -715,3 +715,20 @@ Python, CMake.
 Обучение, участие в интересных проектах и расширение профессиональной экспертизы;
 Полис ДМС;
 Cлужебную сотовую связь.
+
+* Go-разработчик в команду рекомендаций
+Компания: Авито
+Вам предстоит:
+-проектировать и разрабатывать высоконагруженные сервисы на Go;
+-разрабатывать пайплайны real-time обработки данных;
+-строить распределенные хранилища важной для рекомендаций информации;
+-развивать внутренние инструменты для оценки качества рекомендаций;
+-работать в тесном взаимодействии с DS инженерами и продуктовыми командами;
+-влиять на внешний вид рекомендаций.
+
+Мы ждём, что вы:
+-имеете опыт коммерческой разработки на языке Go или C++ от 3-х лет;
+-знаете алгоритмы и структуры данных;
+-имеете практический опыт или теоретические знания в ML;
+-понимаете основы микросервисной архитектуры.
+Контакты: https://career.avito.com/vacancies/razrabotka/17230/
