--- a/golang/Управляем множеством горутин с errgroup.org
+++ b/golang/Управляем множеством горутин с errgroup.org
@@ -1,18 +1,18 @@
 #+title: Управляем Множеством Горутин С Errgroup
 
-"golang.org/x/sync/errgroup"
+https://golang.org/x/sync/errgroup
 
 Это утилита из официальной библиотеки Go =x=, которая используется для одновременного выполнения нескольких =goroutines= и обработки ошибок.
 Она реализует =errgroup.Group= на основе =sync.WaitGroup=, предоставляя более мощные функции для параллельного программирования.
 
-=Преимущества errgroup=
+* Преимущества errgroup
 По сравнению с =sync.WaitGroup=, =errgroup.Group= обладает следующими преимуществами:
 1. Обработка ошибок: =sync.WaitGroup= отвечает только за ожидание завершения =goroutines= и не обрабатывает возвращаемые значения или ошибки. Хотя =errgroup.Group= не может напрямую обрабатывать возвращаемые значения, он может немедленно прервать выполнение других =goroutines= при возникновении ошибки в =goroutine= и вернуть первую ошибку, не являющуюся =nil= в методе =Wait=.
 2. Отмена контекста: =errgroup= может использоваться в сочетании с =context.Context=. Когда =goroutine= сталкивается с ошибкой, он может автоматически отменить другие goroutines, эффективно контролируя ресурсы и избегая ненужной работы.
 3. Упрощение параллельного программирования: использование =errgroup= позволяет сократить объём шаблонного кода для обработки ошибок. Разработчикам не нужно вручную управлять состояниями ошибок и логикой синхронизации, что делает параллельное программирование более простым и удобным в обслуживании.
 4. Ограничение количества одновременных подключений: =errgroup= предоставляет интерфейс для ограничения количества одновременных подключений =goroutines= во избежание перегрузки, которой нет в =sync.WaitGroup=.
 
-=Пример использования errgroup.Group=
+* Пример использования errgroup.Group
 #+begin_src go
 import (
     "fmt"
@@ -47,7 +47,7 @@ func main() {
 }
 #+end_src
 
-=Отмена контекста=
+* Отмена контекста
 =errgroup= позволяет =errgroup.WithContext= добавить функцию отмены.
 
 #+begin_src go
@@ -101,7 +101,7 @@ func main() {
 }
 #+end_src
 
-=Ограничение количества параллелизмов=
+* Ограничение количества параллелизмов
 
 =errgroup= обеспечивает =errgroup.SetLimit= ограничение количества одновременно выполняемых =goroutines= операций.
 
@@ -135,7 +135,7 @@ func main() {
 }
 #+end_src
 
-=Try to Start=
+* Try to Start
 
 =errgroup= предоставляет =errgroup.TryGo= возможность попытаться запустить задачу, которая должна использоваться в сочетании с =errgroup.SetLimit=.
 
