add some notes - todo and job

--- a/вакансии.org
+++ b/вакансии.org
@@ -732,3 +732,38 @@ Cлужебную сотовую связь.
 -имеете практический опыт или теоретические знания в ML;
 -понимаете основы микросервисной архитектуры.
 Контакты: https://career.avito.com/vacancies/razrabotka/17230/
+
+* Golang разработчик
+Компания: Точка
+ЗП: до 450 000₽
+Что делать
+— Разрабатывать клиентский и интеграционный API для интернет-банка: создавать документы, подписывать их и другие возможности.
+— Развивать и поддерживать сервисы для документооборота, такие как работа с криптографией и создание печатных форм.
+— Развивать электронный документооборот как инфраструктурный SaaS-сервис, которым могут пользоваться другие команды Точки.
+— Создавать платформу по взаимодействию Точки с другими операторами электронного документооборота в России.
+— Участвовать в запуске новых сервисов, в том числе выходящих за рамки платформы интернет-банка.
+— Работать вместе с продакт-менеджером и системным аналитиком над продуктовыми планами: проверять требования, проектировать архитектуру для сложных бизнес-задач, следить за качеством и поддерживаемостью кода.
+— Участвовать в двухнедельных дежурствах вместе с командой Сопровождения. Продуктовых задач не будет, нужно выступать как третья линия поддержки для разбора и устранения сложных ситуаций и ошибок в работе сервисов.
+— Предлагать улучшения и автоматизации админки и тулинга для решения типовых проблем.
+‍
+Наш стек
+— У нас микросервисная архитектура.
+— Используем Golang 1.22
+— Храним данные в PostgreSQL.
+— Реализуем асинхронное взаимодействие на RabbitMQ.
+— Используем TeamCity, GitLab для CI/CD.
+— Разворачиваем сервисы в Docker, работаем с Kubernetes.
+— Проводим мониторинг на Prometheus, Grafana, Sentry.
+— Заботимся о качестве кода: проводим ревью, всё покрываем тестами и даём обратную связь.
+— Используем Agile, SCRUM и OKR.
+
+Ты подойдёшь, если
+— Есть опыт коммерческой разработки на Golang от 3 лет.
+— Умеешь писать читаемый код.
+— Знаешь, как работать с реляционными базами данных.
+— Знаешь Git, CI и CD.
+— Можешь работать с Docker, виртуализацией, контейнеризацией.
+— Есть опыт работы с очередями.
+— Можешь самостоятельно организовать работу и выполнять задачи без постоянного контроля.
+— Легко находишь общий язык с людьми и умеешь понятно объяснять сложные вещи.
+Контакты: https://tochka.com/hr/it/middle-golang/
