--- a/План.md
+++ b/План.md
@@ -1,6 +1,5 @@
 go
 grpc
-бот
 ebiten
 
 micro
@@ -32,3 +31,4 @@ https://www.osp.ru/os/2017/02/13052224
 # postrgess
 How I Work With PostgreSQL in Go
 https://www.alexisbouchez.com/blog/postgresql-in-go?utm_source=tg&utm_medium=go&utm_campaign=180525
+связь БД через кафка коннект
