--- a/queue/Установка Kafka в докере.org
+++ b/queue/Установка Kafka в докере.org
@@ -2,25 +2,38 @@
 
 Добавляем файл docker-compose.yml
 #+begin_src
-version: '3'
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
+  zookeeper-sandbox:
+    image: confluentinc/cp-zookeeper:7.5.0
+    hostname: zookeeper-sandbox
+    container_name: zookeeper-sandbox-container
+    ports:
+      - "2182:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
-  kafka:
-    image: confluentinc/cp-kafka:latest
+  kafka-broker-sandbox:
+    image: confluentinc/cp-kafka:7.5.0
+    hostname: kafka-broker-sandbox
+    container_name: kafka-broker-sandbox-container
     depends_on:
-      - zookeeper
+      - zookeeper-sandbox
     ports:
-      - "9092:9092"
+      - "9093:9092"
     environment:
       KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_ZOOKEEPER_CONNECT: 'zookeeper-sandbox:2181'
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka-broker-sandbox:29092,PLAINTEXT_HOST://localhost:9093
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:29092,PLAINTEXT_HOST://0.0.0.0:9092
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS: 0
+
+networks:
+  default:
+    name: kafka-net-sandbox
 #+end_src
 
 Запускаем
@@ -36,8 +49,16 @@ docker-compose logs kafka
 Как проверить работу Kafka
 Создайте топик:
 #+begin_src
-docker exec -it <kafka-container-name> kafka-topics --create --topic test-topic --bootstrap-server localhost:9092 --partitions 1 --replication-factor 1
+docker exec kafka-broker-sandbox-container kafka-topics --bootstrap-server kafka-broker-sandbox:29092 --create --topic my-learning-topic --partitions 1 --replication-factor 1
 #+end_src
+, где:
+- docker exec kafka-broker-sandbox-container: выполняет команду внутри контейнера с именем kafka-broker-sandbox-container (имя контейнера Кафки определено в докер-компоуз файле);
+- kafka-topics: утилита Kafka для управления топиками (внутри контейнера);
+- --bootstrap-server kafka-broker-sandbox:29092: флаг (команда) и значение для этого флага - адрес Kafka брокера для подключения. kafka-broker-sandbox - это имя сервиса, которое Docker преобразует во внутренний IP-адрес, а 29092 - это внутренний порт, который Kafka слушает;
+- --create: флаг для создания топика;
+- --topic my-learning-topic: флаг имени создаваемого топика и значение флага, значение будет фигурировать в коде микросервисов;
+- --partitions 1: количество партиций. Это разделы внутри топика, где каждая партиция - отдельная очередь сообщений.
+- --replication-factor 1: фактор репликации (количество копий топика, включая исходный экземпляр).
 
 Отправьте сообщение:
 #+begin_src
