edit kafka note

--- a/queue/Apache Kafka.org
+++ b/queue/Apache Kafka.org
@@ -131,3 +131,35 @@ func readMessages(ctx context.Context, reader *kafka.Reader) {
 	}
 }
 #+end_src
+
+* Гарантии доставки в Kafka
+Apache Kafka предоставляет три основные гарантии доставки сообщений, которые влияют на надёжность и производительность системы:
+- =At most once=
+  Это означает, что сообщение будет доставлено не более одного раза. При этом возможна потеря сообщений, так как продюсер может не успеть отправить их на брокер, но повторная отправка не будет происходить.
+- =At least once=
+  Гарантируется, что сообщение будет доставлено как минимум один раз. Это означает, что если продюсер не получит подтверждения о доставке, то он повторно отправит сообщение. Это стандартное поведение Kafka.
+  По умолчанию Kafka использует гарантию At least once для доставки сообщений. Это означает, что если продюсер не получает подтверждения от брокера, он повторно отправит сообщение. В этом случае возможны дубли, но сообщение будет доставлено.
+- =Exactly once=
+  Это гарантирует, что сообщение будет доставлено ровно один раз. Для этого включаются дополнительные механизмы, такие как идемпотентность и транзакции, чтобы избежать дублирования сообщений, как на стороне продюсера, так и на стороне консьюмера.
+
+#+begin_src go
+writer := kafka.NewWriter(kafka.WriterConfig{
+		Brokers:      []string{"localhost:9092"},
+		Topic:        "my-topic",
+		RequiredAcks: -1,               // Подтверждение от всех реплик
+		MaxAttempts:  10,               //кол-во попыток доставки(по умолчанию всегда 10)
+		BatchSize:    100,              // Ограничение на количество сообщений(по дефолту 100)
+		WriteTimeout: 10 * time.Second, //время ожидания для записи(по умолчанию 10сек)
+		Balancer:     &kafka.RoundRobin{}, //балансировщик.
+	})
+#+end_src
+
+Как эти параметры влияют на доставку сообщений:
+- RequiredAcks: 0 — минимальная гарантия, сообщения могут быть потеряны(at most once).
+- RequiredAcks: 1 — сообщения гарантированно доставляются хотя бы на одного лидера, но могут быть потеряны при сбоях в сети или на брокере((At least once).
+- RequiredAcks: -1 — самые надежные гарантии, сообщения подтверждаются всеми репликами, что минимизирует риск потери сообщений, но с увеличением времени ожидания. Значение -1 стоит по умолчанию(At least once, но с дополнительными подтверждениями).
+
+Балансировщик используется для распределения сообщений по партициям.
+- RoundRobin - равномерное распределение по партициям.
+- LeastBytes - это реализация балансировщика, который направляет сообщения в партиции, получивший наименьшее количество данных.
+- Hash - балансировщик по умолчанию для сообщений с ключам.
