edit kafka note

--- a/queue/Apache Kafka.org
+++ b/queue/Apache Kafka.org
@@ -33,7 +33,7 @@ Kafka организует обмен сообщениями через топи
 - Проблемы с пропускной способностью в случае высокого объёма данных: В некоторых случаях Kafka может столкнуться с проблемами при работе с очень большими объёмами данных.
 - Задержка: Хотя Kafka эффективен в плане пропускной способности, в некоторых случаях он может иметь небольшую задержку при доставке сообщений.
 
-* Пример отправки сообщений
+* Пример отправки сообщений с помощью segmentio/kafka-go
 #+begin_src go
 package main
 
@@ -87,7 +87,7 @@ func sendMessages(writer *kafka.Writer, msgs []string) {
 	}
 }
 #+end_src
-* Пример получения сообщений
+* Пример получения сообщений с помощью segmentio/kafka-go
 #+begin_src go
 package main
 
